--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
     "start": "node app/app.js",
     "dev": "nodemon app/app.js",
     "test": "jest"
+
   },
-  "author": "",
+  "author": "Marta Garijo",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^9.0.2"
+    "cors": "^2.8.5",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^9.0.2",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "jest": "^28.1.1"
-  }
+    "jest": "^28.1.1",
+    "nodemon": "^2.0.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MartaG22/nodeInitialDemo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MartaG22/nodeInitialDemo/issues"
+  },
+  "homepage": "https://github.com/MartaG22/nodeInitialDemo#readme"
 }
