--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "start": "node app/app.js",
     "dev": "nodemon app/app.js",
     "test": "jest"
-
   },
   "author": "Marta Garijo",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^9.0.2",
-    "path": "^0.12.7",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^9.0.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^28.1.1",
