--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "dotenv": "^9.0.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3"
