--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.3"
   },
   "name": "app",
   "version": "1.0.0",
