--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
   "description": "Xat",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "app.js"
   },
   "author": "Marta Garijo",
   "license": "ISC"
