--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node mysql jocDaus_Sequelize/app/app.js",
-    "dev mysql": "nodemon  jocDaus_Sequelize/app/app.js",
-    "dev mongo": "nodemon  jocDaus_Mongoose/app/app.js"
+    "mysql": "nodemon  jocDaus_Sequelize/app/app.js",
+    "mongo": "nodemon  jocDaus_Mongoose/app/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.5"
