--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node mysql jocDaus_Sequelize/app/app.js",
-    "mysql": "nodemon  jocDaus_Sequelize/app/app.js",
-    "mongo": "nodemon  jocDaus_Mongoose/app/app.js"
+    "mysql": "node  jocDaus_Sequelize/app/app.js",
+    "mongo": "node  jocDaus_Mongoose/app/app.js",
+    "devMysql": "nodemon  jocDaus_Sequelize/app/app.js",
+    "devMongo": "nodemon  jocDaus_Mongoose/app/app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/MartaG22/nodeInitialDemo/tree/jocDaus#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
