Arreglant base de dades amb les variables d'entorn

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 # database connection  MYSQL
+DATABASE = mysql
 MYSQL_HOST = localhost
 MYSQL_PORT = 3306
 MYSQL_USER = root
 MYSQL_PASSWORD = 1234
-MYSQL_NAME = test_db
+MYSQL_NAME = dbJugadors
 
 # database connection MONGOOSE
 MONGOOSE_HOST = localhost
