--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "homepage": "https://github.com/MartaG22/nodeInitialDemo/tree/jocDaus#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20",
     "sequelize": "^6.25.5"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
