--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^9.0.2",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "jest": "^28.1.1",
     "nodemon": "^2.0.7"
   }
