--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "socket.io": "^4.5.4"
   },
