--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.5",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
   },
