--- a/ANITC_CLIENT/package.json
+++ b/ANITC_CLIENT/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "client",
+  "name": "cliente",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon ./app/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "cross-fetch": "^3.1.5",
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
