--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "nodeinitialdemo",
+  "name": "server",
   "version": "1.0.0",
-  "description": "sample project for node",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app/app.js",
-    "dev": "nodemon app/app.js",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.2",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
-    "jest": "^28.1.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.20"
   }
 }
