Modificant la manera de connectar a la base de dades (que donava error i no l'havia canviat

--- a/.env-template
+++ b/.env-template
@@ -8,6 +8,7 @@ MYSQL_NAME = dbJugadors
 
 
 # database connection MONGOOSE
+DB_TYPE = mongodb
 MONGOOSE_HOST = localhost
 MONGOOSE_PORT = 27017
 MONGOOSE_NAME = test_db
